first draft complete

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 							let date = new Date();
 							console.log(date);
 					</script> -->
-					<input type="text" id="todaydate" disabled />
-					<script> document.getElementById("todaydate").value = new Date().toLocaleDateString(); </script>
+					<!-- <input type="text" id="todaydate" disabled />
+					<script> document.getElementById("todaydate").value = new Date().toLocaleDateString(); </script> -->
 					</span>
 					<h2><a href="#">Gourmet Sausages & Craft Beer</a></h2>
 					<!-- <p>Daily menu featuring specialty 1/4lb sausages, spicy chicken sandwiches, sides, rotating beer selection, & more!</p> -->
