--- a/sides.html
+++ b/sides.html
@@ -32,11 +32,11 @@
 				<!-- <li><a href="index.html">This is Massively</a></li>
 							<li class="active"><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li> -->
-							<li><a href="index.html">Home</a></li>
-							<li><a href="specialties.html">Specialties</a></li>
-							<li><a href="buildyourown.html">Build Your Own</a></li>
-							<li class="active"><a href="sides.html">Sides</a></li>
-							<li><a href="drinks.html">Drinks</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="specialties.html">Specialties</a></li>
+				<li><a href="buildyourown.html">Build Your Own</a></li>
+				<li class="active"><a href="sides.html">Sides</a></li>
+				<li><a href="drinks.html">Drinks</a></li>
 			</ul>
 			<ul class="icons">
 				<!-- <li><a target=”_blank” href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
@@ -149,9 +149,9 @@
 							</div>
 						</div>
 					</div> -->
-				<!-- </header> -->
+					<!-- </header> -->
 
-				<!-- <header class='major' id="specialties-box">
+					<!-- <header class='major' id="specialties-box">
 					<h2>Specialties</h2>
 					<div> ******* Beef Frankfurter is a traditional hot dog / extra toppings MIGHT be free</div>
 					<span class="date">Hillside - <b>$12</b></span>
@@ -229,19 +229,54 @@
 
 					</div> -->
 					<h2>Sides</h2>
-					<span class="date">Fries *</span>
-					<p>Shoestring fries with house specialty seasoning</p>
-					<p>*Regular ................ $4</p>
-					<p>*Large ................ $6</p>
-					<span class="date">Macaroni Salad - $5</span>
-					<p>Our home-made macaroni salad</p>
-					<!-- <h4>$5</h4> -->
-					<span class="date">Potato Salad - $5</span>
-					<p>Our home-made potato salad</p>
-					<!-- <h4>$5</h4> -->
-					<span class="date">Chili Cheese Fries - $7</span>
-					<p>Shoestring fries topped with all-meat chili, cheese, & onions</p>
 				</header>
+
+				<div class="sides-grid">
+					<div class="side">
+						<!-- <div class="side-flex"> -->
+						<div class="side-name">Fries</div>
+
+						<!-- </div> -->
+						<div class="side-info">Shoestring fries with house specialty seasoning</div>
+						<div class="fries">
+							<div class="side-price">Regular ....... $4.00</div>
+							<div class="side-price">Large ....... $6.00</div>
+						</div>
+					</div>
+					<div class="side">
+						<div class="side-flex">
+							<div class="side-name">Macaroni Salad</div>
+							<div class="side-price">$5.00</div>
+						</div>
+						<div class="side-info">Our home-made macaroni salad</div>
+					</div>
+					<div class="side">
+						<div class="side-flex">
+							<div class="side-name">Potato Salad</div>
+							<div class="side-price">$5.00</div>
+						</div>
+						<div class="side-info">Our home-made potato salad</div>
+					</div>
+					<div class="side">
+						<div class="side-flex">
+							<div class="side-name">Chili Cheese Fries</div>
+							<div class="side-price">$7.00</div>
+						</div>
+						<div class="side-info">Shoestring fries topped with all-meat chili, cheese, & onions</div>
+					</div>
+				</div>
+
+
+				<!-- <span>Fries *</span>
+				<p>Shoestring fries with house specialty seasoning</p>
+				<p>*Regular ................ $4</p>
+				<p>*Large ................ $6</p>
+				<span>Macaroni Salad - $5</span>
+				<p>Our home-made macaroni salad</p>
+				<span>Potato Salad - $5</span>
+				<p>Our home-made potato salad</p>
+				<span>Chili Cheese Fries - $7</span>
+				<p>Shoestring fries topped with all-meat chili, cheese, & onions</p> -->
 				<!-- <header class="major">
 					<span class="date">April 25, 2017</span>
 					<h1>This is a<br />
