--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 					<!-- <input type="text" id="todaydate" disabled />
 					<script> document.getElementById("todaydate").value = new Date().toLocaleDateString(); </script> -->
 					</span>
-					<h2><a href="#">Gourmet Sausages & Craft Beer</a></h2>
+					<h2><a href="specialties.html">Gourmet Sausages & Craft Beer</a></h2>
 					<!-- <p>Daily menu featuring specialty 1/4lb sausages, spicy chicken sandwiches, sides, rotating beer selection, & more!</p> -->
 					<p>Home of Martinez's finest sausages and rotating tap room. Featuring 12 rotating beers on tap, 1/4lb specialty sausages & hot dogs, frosé, & slush.</p>
 				</header>
-				<a href="#" class="image main"><img src="pics/lotsofhotdogs.png" alt="" /></a>
+				<a href="specialties.html" class="image main"><img src="pics/lotsofhotdogs.png" alt="" /></a>
 				<ul class="actions special">
 					<!-- <li><a href="#" class="button large">Full Story</a></li> -->
 				</ul>
@@ -108,10 +108,10 @@
 				<article>
 					<header>
 						<!-- <span class="date">April 24, 2017</span> -->
-						<h2><a href="#">Chicago
+						<h2><a href="specialties.html">Chicago
 							</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="pics/chicago.jpg" alt="" /></a>
+					<a href="specialties.html" class="image fit"><img src="pics/chicago.jpg" alt="" /></a>
 					<p>Beef Frankforter (traditional hotdog) topped with sweet relish, onion, tomato, brown mustard,
 						 dill pickle, sport peppers, & celery salt</p>
 					<ul class="actions special">
@@ -121,9 +121,9 @@
 				<article>
 					<header>
 						<!-- <span class="date">April 22, 2017</span> -->
-						<h2><a href="#">Chili Frito</a></h2>
+						<h2><a href="specialties.html">Chili Frito</a></h2>
 					</header>
-					<a href="#" class="image fit"><img id='flip' src="pics/chilifrito.jpg" alt="" /></a>
+					<a href="specialties.html" class="image fit"><img id='flip' src="pics/chilifrito.jpg" alt="" /></a>
 					<p>Smoked Bratwurst topped with chili, cheese, onions, scallions, & celery salt</p>
 					<ul class="actions special">
 						<li><a href="specialties.html" class="button">See More Specailties</a></li>
@@ -132,9 +132,9 @@
 				<article>
 					<header>
 						<!-- <span class="date">April 18, 2017</span> -->
-						<h2><a href="#">Martinez</a></h2>
+						<h2><a href="specialties.html">Martinez</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="pics/martinez.jpg" alt="" /></a>
+					<a href="specialties.html" class="image fit"><img src="pics/martinez.jpg" alt="" /></a>
 					<p>Cajun Sausage topped with BBQ sauce, fresh jalapeños, & grilled onions</p>
 					<ul class="actions special">
 						<li><a href="specialties.html" class="button">See More Specailties</a></li>
@@ -143,9 +143,9 @@
 				<article>
 					<header>
 						<!-- <span class="date">April 14, 2017</span> -->
-						<h2><a href="#">Spicy Chicken</a></h2>
+						<h2><a href="specialties.html">Spicy Chicken</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="pics/spicychicken.jpg" alt="" /></a>
+					<a href="specialties.html" class="image fit"><img src="pics/spicychicken.jpg" alt="" /></a>
 					<p>Spicy fried chicken sandwich on brioche with our house-made coleslaw & spicy mayo</p>
 					<ul class="actions special">
 						<li><a href="specialties.html" class="button">See More Specailties</a></li>
@@ -255,6 +255,7 @@
 			<ul>
 				<li>&copy; Hilside Martinez</li>
 				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<li>Website Created by: <a href="mailto:ari.softwaredev@gmail.com">Ari</a></li>
 			</ul>
 		</div>
 
