--- a/sides.html
+++ b/sides.html
@@ -367,6 +367,7 @@
 			<ul>
 				<li>&copy; Hillside Martinez</li>
 				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<li>Website Created by: <a href="mailto:ari.softwaredev@gmail.com">Ari</a></li>
 			</ul>
 		</div>
 
