customer corrections added

--- a/buildyourown.html
+++ b/buildyourown.html
@@ -23,6 +23,7 @@
 
 		<!-- Header -->
 		<header id="header">
+			<img id="small-logo" src="pics/favicon.ico">
 			<a href="index.html" class="logo">Home</a>
 		</header>
 
@@ -204,6 +205,7 @@
 
 					<h2>Build Your Own</h2>
 					<p>Design your custom sausage with choice of 1/4 lb sausage and selection of 30 toppings</p>
+					<p>*Prices shown are cash prices</p>
 					<div class="build-box">
 						<div class="boxes">
 							<span class="date">Chose Your Protein</span>
@@ -219,9 +221,9 @@
 							<span class="date">Toppings</span>
 							<div id="toppings">Onions, Scallions, Frito Chips
 								Tomato, Pickled Jalepeños, Dill
-								Pickle Spear, Pepperoncinis, Salsa
+								Pickle Spear, Pepperoncinis, Salsa,
 								Fresh Jalapeños, Sweet Relish, Sport
-								Pepper, Sauerkraut, Salt & Pepper,
+								Peppers, Sauerkraut, Salt & Pepper,
 								Celery salt, Ketchup, Yellow Mustard,
 								Brown Mustard, Sweet Chili Sauce, BBQ
 								Sauce, Mayo, Spicy Mayo</div>
@@ -237,7 +239,7 @@
 							<div>All-Meat Chili - $2.00</div>
 							<div>Cheese - $1.00</div>
 							<div>Coleslaw - $1.00</div>
-							<div>Pastrami - TBD?</div>
+							<div>Pastrami - $3.00</div>
 						</div>
 
 
@@ -307,6 +309,7 @@
 						<li><input type="submit" value="Send Message" /></li>
 					</ul>
 				</form>
+				<p>*emails coming soon</p>
 			</section>
 			<section class="split contact">
 				<section class="alt">
@@ -316,7 +319,7 @@
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(000) 000-0000</a></p>
+					<p><a href="#">(925) 822-3425</a></p>
 				</section>
 				<section>
 					<h3>Email</h3>
@@ -344,9 +347,10 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li>&copy; Untitled</li>
-				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<li>&copy; Hillside Martinez</li>
+				<!-- <li>Design: <a href="https://html5up.net">HTML5 UP</a></li> -->
 				<li>Website Created by: <a href="mailto:ari.softwaredev@gmail.com">Ari</a></li>
+				<li>Photogropher: <a href="mailto:sbellecci@gmail.com">S. Bellecci</a></li>
 			</ul>
 		</div>
 
