--- a/sides.html
+++ b/sides.html
@@ -23,6 +23,7 @@
 
 		<!-- Header -->
 		<header id="header">
+			<img id="small-logo" src="pics/favicon.ico">
 			<a href="index.html" class="logo">Home</a>
 		</header>
 
@@ -229,6 +230,7 @@
 
 					</div> -->
 					<h2>Sides</h2>
+					<p>*Prices shown are cash prices</p>
 				</header>
 
 				<div class="sides-grid">
@@ -260,9 +262,9 @@
 					<div class="side">
 						<div class="side-flex">
 							<div class="side-name">Chili Cheese Fries</div>
-							<div class="side-price">$7.00</div>
+							<div class="side-price">$9.00</div>
 						</div>
-						<div class="side-info">Shoestring fries topped with all-meat chili, cheese, & onions</div>
+						<div class="side-info">Shoestring fries topped with all-meat chili & cheese</div>
 					</div>
 				</div>
 
@@ -328,6 +330,7 @@
 						<li><input type="submit" value="Send Message" /></li>
 					</ul>
 				</form>
+				<p>*emails coming soon</p>
 			</section>
 			<section class="split contact">
 				<section class="alt">
@@ -337,7 +340,7 @@
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(000) 000-0000</a></p>
+					<p><a href="#">(925) 822-3425</a></p>
 				</section>
 				<section>
 					<h3>Email</h3>
@@ -366,8 +369,9 @@
 		<div id="copyright">
 			<ul>
 				<li>&copy; Hillside Martinez</li>
-				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<!-- <li>Design: <a href="https://html5up.net">HTML5 UP</a></li> -->
 				<li>Website Created by: <a href="mailto:ari.softwaredev@gmail.com">Ari</a></li>
+				<li>Photogropher: <a href="mailto:sbellecci@gmail.com">S. Bellecci</a></li>
 			</ul>
 		</div>
 
