--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							</a></h2>
 					</header>
 					<a href="specialties.html" class="image fit"><img src="pics/chicago.jpg" alt="" /></a>
-					<p>Beef Frankforter (traditional hotdog) topped with sweet relish, onion, tomato, brown mustard,
+					<p>Beef Frankfurter (traditional hotdog) topped with sweet relish, onion, tomato, brown mustard,
 						 dill pickle, sport peppers, & celery salt</p>
 					<ul class="actions special">
 						<li><a href="specialties.html" class="button">See More Specailties</a></li>
@@ -121,7 +121,7 @@
 				<article>
 					<header>
 						<!-- <span class="date">April 22, 2017</span> -->
-						<h2><a href="specialties.html">Chili Frito</a></h2>
+						<h2><a href="specialties.html">Chili Dog With Fritos</a></h2>
 					</header>
 					<a href="specialties.html" class="image fit"><img id='flip' src="pics/chilifrito.jpg" alt="" /></a>
 					<p>Smoked Bratwurst topped with chili, cheese, onions, scallions, & celery salt</p>
@@ -146,7 +146,7 @@
 						<h2><a href="specialties.html">Spicy Chicken</a></h2>
 					</header>
 					<a href="specialties.html" class="image fit"><img src="pics/spicychicken.jpg" alt="" /></a>
-					<p>Spicy fried chicken sandwich on brioche with our house-made coleslaw & spicy mayo</p>
+					<p>Spicy chicken on brioche with our house-made coleslaw, spicy mayo, fresh jalapeños, & BBQ sauce</p>
 					<ul class="actions special">
 						<li><a href="specialties.html" class="button">See More Specailties</a></li>
 					</ul>
@@ -218,6 +218,7 @@
 						<li><input type="submit" value="Send Message" /></li>
 					</ul>
 				</form>
+				<p>*emails coming soon</p>
 			</section>
 			<section class="split contact">
 				<section class="alt">
@@ -227,7 +228,7 @@
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(000) 000-0000</a></p>
+					<p>(925) 822-3425</p>
 				</section>
 				<section>
 					<h3>Email</h3>
@@ -253,10 +254,10 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li>&copy; Hilside Martinez</li>
-				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<li>&copy; Hillside Martinez</li>
+				<!-- <li>Design: <a href="https://html5up.net">HTML5 UP</a></li> -->
 				<li>Website Created by: <a href="mailto:ari.softwaredev@gmail.com">Ari</a></li>
-			</ul>
+				<li>Photogropher: <a href="mailto:sbellecci@gmail.com">S. Bellecci</a></li>
 		</div>
 
 	</div>
