removed email related items and added corrections/updates

--- a/buildyourown.html
+++ b/buildyourown.html
@@ -48,7 +48,8 @@
 				<!-- <li><a target=”_blank” href="#" class="icon brands fa-mail"><span class="label">GitHub</span></a></li> -->
 				<!-- <li><a target=”_blank” href="artinez/" class="icon brands fa-instagram"><span
 							class="label">Instagram</span></a></li> -->
-
+				<li><a target=”_blank” href="tel:9258223425" class="icon solid fa-phone"><span
+							class="label">Phone</span></a></li>
 			</ul>
 		</nav>
 
@@ -219,12 +220,12 @@
 						</div>
 						<div class="boxes">
 							<span class="date">Toppings</span>
-							<div id="toppings">Onions, Scallions, Frito Chips
+							<div id="toppings">Onions, Scallions, Frito Chips,
 								Tomato, Pickled Jalepeños, Dill
 								Pickle Spear, Pepperoncinis, Salsa,
 								Fresh Jalapeños, Sweet Relish, Sport
 								Peppers, Sauerkraut, Salt & Pepper,
-								Celery salt, Ketchup, Yellow Mustard,
+								Celery Salt, Ketchup, Yellow Mustard,
 								Brown Mustard, Sweet Chili Sauce, BBQ
 								Sauce, Mayo, Spicy Mayo</div>
 						</div>
@@ -289,7 +290,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<section>
+			<!-- <section>
 				<form method="post" action="#">
 					<div class="fields">
 						<div class="field">
@@ -310,7 +311,7 @@
 					</ul>
 				</form>
 				<p>*emails coming soon</p>
-			</section>
+			</section> -->
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
@@ -319,12 +320,12 @@
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(925) 822-3425</a></p>
+					<p><a href="tel:9258223425">(925) 822-3425</a></p>
 				</section>
-				<section>
+				<!-- <section>
 					<h3>Email</h3>
 					<p><a href="#">info@untitled.tld</a></p>
-				</section>
+				</section> -->
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
@@ -339,6 +340,8 @@
 								class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a target=”_blank” href="https://www.instagram.com/hillside.martinez/"
 								class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a target=”_blank” href="tel:9258223425" class="icon solid fa-phone"><span
+									class="label">Phone</span></a></li>
 					</ul>
 				</section>
 			</section>
