--- a/drinks.html
+++ b/drinks.html
@@ -48,7 +48,8 @@
 				<!-- <li><a target=”_blank” href="#" class="icon brands fa-mail"><span class="label">GitHub</span></a></li> -->
 				<!-- <li><a target=”_blank” href="artinez/" class="icon brands fa-instagram"><span
 							class="label">Instagram</span></a></li> -->
-
+				<li><a target=”_blank” href="tel:9258223425" class="icon solid fa-phone"><span
+							class="label">Phone</span></a></li>
 			</ul>
 		</nav>
 
@@ -67,27 +68,32 @@
 							<div class="specialty" id="drink">
 								<div class="specialty-title">Frozen Sangria of the Day</div>
 								<!-- <div class="specialty-price">$9.00</div> -->
-								<div class="specialty-description">Rotating selection of home made frozen sangria and frozen adult beverages, 
-									made only with real fruit juices & purees + never any artificial flavorings or syrups (contains alcohol)</div>
+								<div class="specialty-description">Rotating selection of home made frozen sangria and
+									frozen adult beverages,
+									made only with real fruit juices & purees + never any artificial flavorings or
+									syrups (contains alcohol)</div>
 							</div>
 							<div class="specialty" id="drink">
-								<div class="specialty-title">Frozen Slush of the Day</div>
+								<div class="specialty-title">Frosè & Frozen Slush of the Day</div>
 								<!-- <div class="specialty-price">$15.00</div> -->
-								<div class="specialty-description">Rotating selection of home made frozen slushees, made with only real fruit 
+								<div class="specialty-description">Rotating selection of home made frozen slushees, made
+									with only real fruit
 									purees & juices + never any artificial flavorings or syrups</div>
 							</div>
 							<div class="specialty" id="drink">
 								<div class="specialty-title">Craft Brew</div>
 								<!-- <div class="specialty-price">$15</div> -->
-								<div class="specialty-description">Rotating selection of 12 craft beers on tap, including seasonal favorites and other specialties</div>
+								<div class="specialty-description">Rotating selection of 12 craft beers on tap,
+									including seasonal favorites and other specialties</div>
 							</div>
 						</div>
-						
+
 						<div class="specialty-row">
 							<div class="specialty" id="drink">
 								<div class="specialty-title">Bottled Beer</div>
 								<!-- <div class="specialty-price">$13</div> -->
-								<div class="specialty-description">Standard selection of crowd favorites: canned and bottled beers, domestic & foreign, as well as rotating craft options</div>
+								<div class="specialty-description">Standard selection of crowd favorites: canned and
+									bottled beers, domestic & foreign, as well as rotating craft options</div>
 							</div>
 							<div class="specialty" id="drink">
 								<div class="specialty-title">Grape Juice</div>
@@ -188,7 +194,7 @@
 				<!-- <h4>$5</h4> -->
 				<!-- <span class="date">Chili Cheese Fries - $7</span>
 				<p>Shoestring fries topped with all-meat chili, cheese, & onions</p>
-				</header> --> 
+				</header> -->
 				<!-- <header class="major">
 					<span class="date">April 25, 2017</span>
 					<h1>This is a<br />
@@ -220,7 +226,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<section>
+			<!-- <section>
 				<form method="post" action="#">
 					<div class="fields">
 						<div class="field">
@@ -241,7 +247,7 @@
 					</ul>
 				</form>
 				<p>*emails coming soon</p>
-			</section>
+			</section> -->
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
@@ -250,12 +256,12 @@
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(925) 822-3425</a></p>
+					<p><a href="tel:9258223425">(925) 822-3425</a></p>
 				</section>
-				<section>
+				<!-- <section>
 					<h3>Email</h3>
 					<p><a href="#">info@untitled.tld</a></p>
-				</section>
+				</section> -->
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
@@ -270,6 +276,8 @@
 								class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a target=”_blank” href="https://www.instagram.com/hillside.martinez/"
 								class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a target=”_blank” href="tel:9258223425" class="icon solid fa-phone"><span
+									class="label">Phone</span></a></li>
 					</ul>
 				</section>
 			</section>
