--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 						class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				<!-- <li><a target=”_blank” href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
 				<!-- <li><a target=”_blank” href="#" class="icon brands fa-solid fa-envelope"><span class="label">Instagram</span></a></li> -->
-
+				<li><a target=”_blank” href="tel:9258223425"
+					class="icon solid fa-phone"><span class="label">Phone</span></a></li>
 			</ul>
 		</nav>
 
@@ -85,12 +86,13 @@
 							let date = new Date();
 							console.log(date);
 					</script> -->
-					<!-- <input type="text" id="todaydate" disabled />
+						<!-- <input type="text" id="todaydate" disabled />
 					<script> document.getElementById("todaydate").value = new Date().toLocaleDateString(); </script> -->
 					</span>
 					<h2><a href="specialties.html">Gourmet Sausages & Craft Beer</a></h2>
 					<!-- <p>Daily menu featuring specialty 1/4lb sausages, spicy chicken sandwiches, sides, rotating beer selection, & more!</p> -->
-					<p>Home of Martinez's finest sausages and rotating tap room. Featuring 12 rotating beers on tap, 1/4lb specialty sausages & hot dogs, frosé, & slush.</p>
+					<p>Home of Martinez's finest sausages and rotating tap room. Featuring 12 rotating beers on tap,
+						1/4lb specialty sausages & hot dogs, frosé, & slush.</p>
 				</header>
 				<a href="specialties.html" class="image main"><img src="pics/lotsofhotdogs.png" alt="" /></a>
 				<ul class="actions special">
@@ -113,7 +115,7 @@
 					</header>
 					<a href="specialties.html" class="image fit"><img src="pics/chicago.jpg" alt="" /></a>
 					<p>Beef Frankfurter (traditional hotdog) topped with sweet relish, onion, tomato, brown mustard,
-						 dill pickle, sport peppers, & celery salt</p>
+						dill pickle, sport peppers, & celery salt</p>
 					<ul class="actions special">
 						<li><a href="specialties.html" class="button">See More Specailties</a></li>
 					</ul>
@@ -146,7 +148,8 @@
 						<h2><a href="specialties.html">Spicy Chicken</a></h2>
 					</header>
 					<a href="specialties.html" class="image fit"><img src="pics/spicychicken.jpg" alt="" /></a>
-					<p>Spicy chicken on brioche with our house-made coleslaw, spicy mayo, fresh jalapeños, & BBQ sauce</p>
+					<p>Spicy chicken on brioche with our house-made coleslaw, spicy mayo, fresh jalapeños, & BBQ sauce
+					</p>
 					<ul class="actions special">
 						<li><a href="specialties.html" class="button">See More Specailties</a></li>
 					</ul>
@@ -198,7 +201,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<section>
+			<!-- <section>
 				<form method="post" action="#">
 					<div class="fields">
 						<div class="field">
@@ -219,7 +222,7 @@
 					</ul>
 				</form>
 				<p>*emails coming soon</p>
-			</section>
+			</section> -->
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
@@ -228,12 +231,12 @@
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p>(925) 822-3425</p>
+					<p><a href="tel:9258223425">(925) 822-3425</a></p>
 				</section>
-				<section>
+				<!-- <section>
 					<h3>Email</h3>
 					<p><a href="#">info@untitled.tld</a></p>
-				</section>
+				</section> -->
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
@@ -246,6 +249,8 @@
 								class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a target=”_blank” href="https://www.instagram.com/hillside.martinez/"
 								class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a target=”_blank” href="tel:9258223425"
+								class="icon solid fa-phone"><span class="label">Phone</span></a></li>
 					</ul>
 				</section>
 			</section>
