--- a/specialties.html
+++ b/specialties.html
@@ -48,7 +48,8 @@
 				<!-- <li><a target=”_blank” href="#" class="icon brands fa-mail"><span class="label">GitHub</span></a></li> -->
 				<!-- <li><a target=”_blank” href="artinez/" class="icon brands fa-instagram"><span
 							class="label">Instagram</span></a></li> -->
-
+				<li><a target=”_blank” href="tel:9258223425" class="icon solid fa-phone"><span
+							class="label">Phone</span></a></li>
 			</ul>
 		</nav>
 
@@ -84,16 +85,19 @@
 									celery salt, a dill pickle spear, & a sport pepper</div>
 							</div>
 							<div class="specialty">
-								<div class="specialty-title">Martinez<img id="pepper" src="pics/chilipepper.png"><img id="pepper" src="pics/chilipepper.png"></div>
+								<div class="specialty-title">Martinez<img id="pepper" src="pics/chilipepper.png"><img
+										id="pepper" src="pics/chilipepper.png"></div>
 								<div class="specialty-price">$12.00</div>
-								<div class="specialty-description">1/4 lb cajun sausage topped with BBQ sauce, fresh jalapeños, & grilled onions
+								<div class="specialty-description">1/4 lb cajun sausage topped with BBQ sauce, fresh
+									jalapeños, & grilled onions
 								</div>
 							</div>
 						</div>
 
 						<div class="specialty-row">
 							<div class="specialty">
-								<div class="specialty-title">Buffalo Chili Cheese<img id="pepper" src="pics/chilipepper.png"></div>
+								<div class="specialty-title">Buffalo Chili Cheese<img id="pepper"
+										src="pics/chilipepper.png"></div>
 								<div class="specialty-price">$14.00</div>
 								<div class="specialty-description">1/4 lb hot link topped with all-meat chili, melted
 									cheese, & buffalo sauce</div>
@@ -123,7 +127,7 @@
 								<div class="specialty-title">Pastrami</div>
 								<div class="specialty-price">$15.00</div>
 								<div class="specialty-description">1/4 lb all-beef Frankfurter topped with hot pastrami,
-									grilled onions, brown mustard, & melted
+									pepperoncinis, grilled onions, brown mustard, & melted
 									cheese</div>
 							</div>
 							<div class="specialty">
@@ -156,15 +160,17 @@
 						</div>
 						<div class="specialty-row">
 							<div class="specialty">
-								<div class="specialty-title">Spicy Chicken Sandwich<img id="pepper" src="pics/chilipepper.png"></div>
+								<div class="specialty-title">Spicy Chicken Sandwich<img id="pepper"
+										src="pics/chilipepper.png"></div>
 								<div class="specialty-price">$13.00</div>
-								<div class="specialty-description">Spicy fried chicken sandwich on brioche with our
-									house-made coleslaw & spicy mayo</div>
+								<div class="specialty-description">Spicy chicken on brioche with our house-made
+									coleslaw, spicy mayo, fresh jalapeños, & BBQ sauce</div>
 							</div>
 							<div class="specialty">
 								<div class="specialty-title">Kid's Hot Dog</div>
 								<div class="specialty-price">$7.00</div>
-								<div class="specialty-description">Kid sized all-beef Frankfurter with choice of two
+								<div class="specialty-description">Kid-sized all-beef Frankfurter, 12 & under, with
+									choice of two
 									toppings: ketchup, mustard, mayo, sweet chili
 									sauce, BBQ sauce, or sweet relish</div>
 							</div>
@@ -213,7 +219,7 @@
 					<span class="date">Kid's Hot Dog - $7</span>
 					<p>Kid sized all-beef Frankfurter with choice of two toppings: ketchup, mustard, mayo, sweet chili
 						sauce, BBQ sauce, or sweet relish</p> -->
-<!-- 
+				<!-- 
 				<h2>Build Your Own</h2>
 				<p>Design your custom sausage with choice of 1/4 lb sausage and selection of 30 toppings</p>
 				<div class="build-box">
@@ -299,7 +305,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<section>
+			<!-- <section>
 				<form method="post" action="#">
 					<div class="fields">
 						<div class="field">
@@ -320,7 +326,7 @@
 					</ul>
 				</form>
 				<p>*emails coming soon</p>
-			</section>
+			</section> -->
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
@@ -329,12 +335,12 @@
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(925) 822-3425</a></p>
+					<p><a href="tel:9258223425">(925) 822-3425</a></p>
 				</section>
-				<section>
+				<!-- <section>
 					<h3>Email</h3>
 					<p><a href="#">info@untitled.tld</a></p>
-				</section>
+				</section> -->
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
@@ -349,6 +355,8 @@
 								class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a target=”_blank” href="https://www.instagram.com/hillside.martinez/"
 								class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a target=”_blank” href="tel:9258223425" class="icon solid fa-phone"><span
+									class="label">Phone</span></a></li>
 					</ul>
 				</section>
 			</section>
